--- a/assets/style.css
+++ b/assets/style.css
@@ -163,27 +163,31 @@
     box-shadow: -100vmin 0 12.735021417227982vmin currentColor;
 }
 
-#user-list {
-    position: absolute;
-    top: 0;
-    left: 0;
+.user-list {
+    display: grid;
+    gap: 5px;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .user-item {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background-color: #fff;
-    border-radius: 50%;
+    background-color: #2c2f33;
+    color: #dcddde;
+    border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 24px;
-    color: #000;
-    animation: move 10s linear infinite;
+    font-size: 16px;
+}
+
+.user-item.one-user {
+    grid-template-columns: 1fr;
+}
+
+.user-item.two-users {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.user-item.multiple-users {
+    /* per JavaScript gesetzt */
 }
